kubernetes-security/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: monitoring  # Указываем нужную сервисную учетную запись
      volumes:
        - name: pvc-volume
        - name: homework-conf
#          configMap:
#            name: configmap-conf
      containers:
        - name: nginx
          image: nginx
          ports:
          - containerPort: 8000
            name: http-web-svc
            protocol: TCP
          volumeMounts:
          - name: pvc-volume
            mountPath: "/homework"
          - name: config
            mountPath: /etc/nginx/conf.d/
          - name: homework-conf
            mountPath: /homework/conf
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh","-c","rm -f /homework/index.html; while killall -0 nginx; do sleep 1; done"]
          readinessProbe:
            tcpSocket:
              port: 8000
          readinessProbe:
                  httpGet:
                  path: /index.html
                  port: 8000
          readinessProbe:
            exec:
              command:
              - ls
              - /homework/index.html
          livenessProbe:
            exec:
              command:
              - ls
              - /homework/index.html
            initialDelaySeconds: 5
            periodSeconds: 5
      nodeSelector:
        homework: "true"
#
# init Containers          
      volumes:
      - name: config
        configMap:
          name: configmap-nginx
      - name: pvc-volume
        persistentVolumeClaim:
          claimName: homework-pvc
      - name: homework-conf
        configMap:
          name: configmap-conf
